// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render 1`] = `
<tr
  data-name={1}
>
  <th>
    Bear
    <div
      className="base-link-group nice-btn-group"
    >
      <a
        className="cursor-pointer nice-btn-alt icon fa-eye"
        href={undefined}
        onClick={[Function]}
      >
        View
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-pencil"
        href={undefined}
        onClick={[Function]}
      >
        Edit
      </a>
    </div>
  </th>
  <td />
  <td
    className="good"
  >
    <span>
      <strong>
        Challenge:
      </strong>
       
      <div
        className="challenge-rating inline"
      >
        CR 
        ½
      </div>
       / 
      <div
        className="xp-rating inline"
      >
        25
         XP
      </div>
    </span>
    <span>
      <strong>
        Modified:
      </strong>
       
      <div
        className="challenge-rating inline"
      >
        CR —
      </div>
       / 
      <div
        className="xp-rating inline"
      >
        — XP
      </div>
    </span>
  </td>
  <td />
</tr>
`;

exports[`TableRow should render with campaign 1`] = `
<tr
  data-name={1}
>
  <th>
    Bear
    <div
      className="base-link-group nice-btn-group"
    >
      <a
        className="cursor-pointer nice-btn-alt icon fa-eye"
        href={undefined}
        onClick={[Function]}
      >
        View
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-pencil"
        href={undefined}
        onClick={[Function]}
      >
        Edit
      </a>
    </div>
  </th>
  <td />
  <td
    className="good"
  >
    <span>
      <strong>
        Challenge:
      </strong>
       
      <div
        className="challenge-rating inline"
      >
        CR 
        ½
      </div>
       / 
      <div
        className="xp-rating inline"
      >
        25
         XP
      </div>
    </span>
    <span>
      <strong>
        Modified:
      </strong>
       
      <div
        className="challenge-rating inline"
      >
        CR —
      </div>
       / 
      <div
        className="xp-rating inline"
      >
        — XP
      </div>
    </span>
  </td>
  <td>
    <div
      className="campaign-label inline"
    />
  </td>
</tr>
`;
